--- a/WatchTogether/Scenes/Auth/Login/AvatarCollectionViewCell.xib
+++ b/WatchTogether/Scenes/Auth/Login/AvatarCollectionViewCell.xib
@@ -5,43 +5,36 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AvatarCollectionViewCell" id="gTV-IL-0wX" customClass="AvatarCollectionViewCell" customModule="WatchTogether" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+            <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AN1-AM-sbd">
-                        <rect key="frame" x="8" y="8" width="284" height="284"/>
-                        <color key="backgroundColor" systemColor="systemRedColor"/>
-                    </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HcQ-XV-JCd">
+                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <color key="backgroundColor" systemColor="systemGreenColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="AN1-AM-sbd" secondAttribute="trailing" constant="8" id="Gr1-sN-PBy"/>
-                <constraint firstItem="AN1-AM-sbd" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="RUW-gK-09T"/>
-                <constraint firstItem="AN1-AM-sbd" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="r89-Cz-ZEr"/>
-                <constraint firstAttribute="bottom" secondItem="AN1-AM-sbd" secondAttribute="bottom" constant="8" id="z9S-GM-lf2"/>
+                <constraint firstItem="HcQ-XV-JCd" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="5Jf-nY-gkv"/>
+                <constraint firstItem="HcQ-XV-JCd" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="TfU-bE-Gpf"/>
+                <constraint firstAttribute="bottom" secondItem="HcQ-XV-JCd" secondAttribute="bottom" id="bXI-3g-Bft"/>
+                <constraint firstAttribute="trailing" secondItem="HcQ-XV-JCd" secondAttribute="trailing" id="cNM-MM-hee"/>
             </constraints>
             <size key="customSize" width="182" height="160"/>
+            <connections>
+                <outlet property="avatarImageView" destination="HcQ-XV-JCd" id="LGr-wR-j3u"/>
+            </connections>
             <point key="canvasLocation" x="27.536231884057973" y="108.48214285714285"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
