--- a/WatchTogether/Scenes/Auth/Login/LoginViewController.xib
+++ b/WatchTogether/Scenes/Auth/Login/LoginViewController.xib
@@ -6,7 +6,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -23,7 +22,6 @@
                 <outlet property="emailField" destination="Jk4-Fc-aOb" id="uFc-Ff-Eue"/>
                 <outlet property="loginButton" destination="fb8-wj-jbT" id="uie-OS-ciF"/>
                 <outlet property="passwordField" destination="KCQ-mU-4gd" id="pZT-bG-Atd"/>
-                <outlet property="testCollection" destination="g3g-vQ-dxu" id="GaJ-9z-zUm"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -81,6 +79,9 @@
                                             <state key="normal" title="Kaydol">
                                                 <color key="titleColor" name="RegisterGreenColor"/>
                                             </state>
+                                            <connections>
+                                                <action selector="registerButtonTapAction:" destination="-1" eventType="touchUpInside" id="8IK-lf-n0B"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                 </stackView>
@@ -89,24 +90,10 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </stackView>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="g3g-vQ-dxu">
-                    <rect key="frame" x="0.0" y="44" width="414" height="283.5"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="flo-T8-68j">
-                        <size key="itemSize" width="200" height="200"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" name="MainBlueColorDark"/>
             <constraints>
-                <constraint firstItem="g3g-vQ-dxu" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="EEg-Om-pyo"/>
-                <constraint firstItem="g3g-vQ-dxu" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="NYc-EU-T1b"/>
-                <constraint firstItem="0lM-SM-1Zo" firstAttribute="top" secondItem="g3g-vQ-dxu" secondAttribute="bottom" id="c7h-cG-wJH"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="g3g-vQ-dxu" secondAttribute="trailing" id="kzs-mD-W3j"/>
                 <constraint firstItem="0lM-SM-1Zo" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="pZQ-gG-VBS"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="0lM-SM-1Zo" secondAttribute="trailing" constant="32" id="w0y-Pb-MMR"/>
                 <constraint firstItem="0lM-SM-1Zo" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="32" id="y4c-IH-Z53"/>
@@ -124,8 +111,5 @@
         <namedColor name="WhiteAlpha0,75">
             <color red="1" green="1" blue="1" alpha="0.75" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
