--- a/WatchTogether/Scenes/Room/PlaylistVC/PlaylistViewController.xib
+++ b/WatchTogether/Scenes/Room/PlaylistVC/PlaylistViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlaylistViewController" customModule="WatchTogether" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="95e-5j-dmu" id="nHT-Fe-rFJ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
