--- a/WatchTogether/Scenes/MainTabBar/Rooms/Cell/RoomTVC.xib
+++ b/WatchTogether/Scenes/MainTabBar/Rooms/Cell/RoomTVC.xib
@@ -32,7 +32,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b60-Uf-thp">
                                 <rect key="frame" x="0.0" y="0.0" width="150" height="85"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummythumbnail2" translatesAutoresizingMaskIntoConstraints="NO" id="elw-cD-jmw">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummythumbnail2" translatesAutoresizingMaskIntoConstraints="NO" id="elw-cD-jmw">
                                         <rect key="frame" x="0.0" y="0.0" width="150" height="85"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ADa-K4-7Xx" customClass="GradientView" customModule="WatchTogether" customModuleProvider="target">
@@ -62,16 +62,16 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Njy-F0-Tve">
-                                <rect key="frame" x="120" y="4" width="176" height="48"/>
+                                <rect key="frame" x="120" y="4" width="176" height="37.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yayın ismi test Yayın ismi test Yayın ismi test" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FOX-k5-Y2S" customClass="MarqueeLabel" customModule="MarqueeLabel">
-                                        <rect key="frame" x="0.0" y="0.0" width="176" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="176" height="23.5"/>
                                         <fontDescription key="fontDescription" name="Kanit-Regular" family="Kanit" pointSize="20"/>
                                         <color key="textColor" name="WhiteAlpha0,75"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Güllü - Sabah Olmadan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fkw-vA-qK4" customClass="MarqueeLabel" customModule="MarqueeLabel">
-                                        <rect key="frame" x="0.0" y="30" width="176" height="18"/>
+                                        <rect key="frame" x="0.0" y="23.5" width="176" height="14"/>
                                         <fontDescription key="fontDescription" name="Kanit-Light" family="Kanit" pointSize="12"/>
                                         <color key="textColor" name="WhiteAlpha0,75"/>
                                         <nil key="highlightedColor"/>
@@ -79,20 +79,20 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eQw-hI-QPC">
-                                <rect key="frame" x="252.5" y="59.5" width="47.5" height="25.5"/>
+                                <rect key="frame" x="252" y="63.5" width="48" height="21.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="U0r-Ow-CCM">
-                                        <rect key="frame" x="6" y="3" width="35.5" height="19.5"/>
+                                        <rect key="frame" x="6" y="3" width="36" height="15.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="personIcon" translatesAutoresizingMaskIntoConstraints="NO" id="hVb-94-PUn">
-                                                <rect key="frame" x="0.0" y="4" width="12" height="12"/>
+                                                <rect key="frame" x="0.0" y="2" width="12" height="12"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="12" id="UR1-AA-0mk"/>
                                                     <constraint firstAttribute="width" constant="12" id="VkZ-uh-CmS"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="366" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OZ6-9m-hAt">
-                                                <rect key="frame" x="14" y="0.0" width="21.5" height="19.5"/>
+                                                <rect key="frame" x="14" y="0.0" width="22" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Kanit-Light" family="Kanit" pointSize="13"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -109,10 +109,10 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="upv-jR-NU7">
-                                <rect key="frame" x="205" y="59.5" width="33.5" height="25.5"/>
+                                <rect key="frame" x="204" y="63.5" width="34" height="21.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Özel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aTA-ze-abG">
-                                        <rect key="frame" x="4" y="3" width="25.5" height="19.5"/>
+                                        <rect key="frame" x="4" y="3" width="26" height="15.5"/>
                                         <fontDescription key="fontDescription" name="Kanit-Light" family="Kanit" pointSize="13"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -168,10 +168,10 @@
     </objects>
     <designables>
         <designable name="FOX-k5-Y2S">
-            <size key="intrinsicContentSize" width="400" height="30"/>
+            <size key="intrinsicContentSize" width="395" height="23.5"/>
         </designable>
         <designable name="Fkw-vA-qK4">
-            <size key="intrinsicContentSize" width="122.5" height="18"/>
+            <size key="intrinsicContentSize" width="126" height="14"/>
         </designable>
     </designables>
     <resources>
