--- a/WatchTogether/Scenes/MainTabBar/Rooms/RoomsViewController.xib
+++ b/WatchTogether/Scenes/MainTabBar/Rooms/RoomsViewController.xib
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RoomsViewController" customModule="WatchTogether" customModuleProvider="target">
             <connections>
+                <outlet property="roomTypeSelectionView" destination="B7u-9g-dfp" id="OQB-zs-bwc"/>
                 <outlet property="roomsTableView" destination="LPx-Aq-i9T" id="rHS-fR-AeX"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -21,16 +23,26 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="95" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LPx-Aq-i9T">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="100" width="414" height="762"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B7u-9g-dfp" customClass="RoomTypeSelectionView" customModule="WatchTogether" customModuleProvider="target">
+                    <rect key="frame" x="8" y="52" width="398" height="40"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="Jb4-qP-01G"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" name="MainBlueColorDark"/>
             <constraints>
-                <constraint firstItem="LPx-Aq-i9T" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="8La-yf-9XM"/>
+                <constraint firstItem="B7u-9g-dfp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="69S-HK-hff"/>
+                <constraint firstItem="LPx-Aq-i9T" firstAttribute="top" secondItem="B7u-9g-dfp" secondAttribute="bottom" constant="8" id="SHd-T7-93A"/>
                 <constraint firstItem="LPx-Aq-i9T" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="e08-Ck-mcb"/>
+                <constraint firstItem="B7u-9g-dfp" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="8" id="iy6-oV-e6d"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="LPx-Aq-i9T" secondAttribute="trailing" id="l2B-gW-Pq8"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="B7u-9g-dfp" secondAttribute="trailing" constant="8" id="mpB-tj-Srn"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="LPx-Aq-i9T" secondAttribute="bottom" id="nt2-bR-5Jg"/>
             </constraints>
             <point key="canvasLocation" x="25" y="72"/>
@@ -40,5 +52,8 @@
         <namedColor name="MainBlueColorDark">
             <color red="0.039215686274509803" green="0.070588235294117646" blue="0.16078431372549021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
