--- a/WatchTogether/Scenes/Room/PlaylistVC/Cell/PlaylistTVC.xib
+++ b/WatchTogether/Scenes/Room/PlaylistVC/Cell/PlaylistTVC.xib
@@ -27,16 +27,16 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fso-2g-uE5">
-                        <rect key="frame" x="10" y="0.0" width="300" height="68"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dd3-zr-VTK">
-                                <rect key="frame" x="0.0" y="0.0" width="150" height="68"/>
+                                <rect key="frame" x="0.0" y="0.0" width="160" height="68"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummythumbnail" translatesAutoresizingMaskIntoConstraints="NO" id="qJh-gQ-c01">
-                                        <rect key="frame" x="0.0" y="0.0" width="150" height="68"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="160" height="68"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DUL-ba-mLr" customClass="GradientView" customModule="WatchTogether" customModuleProvider="target">
-                                        <rect key="frame" x="30" y="0.0" width="120" height="68"/>
+                                        <rect key="frame" x="32" y="0.0" width="128" height="68"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="startColor">
@@ -62,16 +62,16 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Uxo-fp-0TE">
-                                <rect key="frame" x="120" y="4" width="176" height="39"/>
+                                <rect key="frame" x="128" y="4" width="188" height="39"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yayın ismi test Yayın ismi test Yayın ismi test" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VBa-Kl-nJQ" customClass="MarqueeLabel" customModule="MarqueeLabel">
-                                        <rect key="frame" x="0.0" y="0.0" width="176" height="21"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="188" height="21"/>
                                         <fontDescription key="fontDescription" name="Kanit-SemiBold" family="Kanit" pointSize="14"/>
                                         <color key="textColor" name="WhiteAlpha0,75"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Güllü - Sabah Olmadan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1eF-nB-bMF" customClass="MarqueeLabel" customModule="MarqueeLabel">
-                                        <rect key="frame" x="0.0" y="21" width="176" height="18"/>
+                                        <rect key="frame" x="0.0" y="21" width="188" height="18"/>
                                         <fontDescription key="fontDescription" name="Kanit-Light" family="Kanit" pointSize="12"/>
                                         <color key="textColor" name="WhiteAlpha0,75"/>
                                         <nil key="highlightedColor"/>
@@ -79,7 +79,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w3E-oD-ukU">
-                                <rect key="frame" x="268" y="36" width="24" height="24"/>
+                                <rect key="frame" x="288" y="36" width="24" height="24"/>
                                 <state key="normal" image="delete"/>
                                 <connections>
                                     <action selector="deleteButtonTapAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="5Ch-tf-tf4"/>
@@ -104,8 +104,8 @@
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="Fso-2g-uE5" secondAttribute="bottom" constant="10" id="1dt-2r-CJz"/>
                     <constraint firstItem="Fso-2g-uE5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Ub6-mL-hqg"/>
-                    <constraint firstItem="Fso-2g-uE5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="u4F-48-Fqs"/>
-                    <constraint firstAttribute="trailing" secondItem="Fso-2g-uE5" secondAttribute="trailing" constant="10" id="y7I-Oe-eCP"/>
+                    <constraint firstItem="Fso-2g-uE5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="u4F-48-Fqs"/>
+                    <constraint firstAttribute="trailing" secondItem="Fso-2g-uE5" secondAttribute="trailing" id="y7I-Oe-eCP"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
